--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hola Java</title>
+    <title>Curso JavaScript</title>
 </head>
 <body>
     <h3>Hola Carlitos</h3>
@@ -21,6 +21,7 @@
     <!--<script src="assets/js/arreglos.js"></script>-->
     <!--<script src="assets/js/arrreglos2.js"></script>-->
     <!--<script src="assets/js/objeto-literal.js"></script>-->
-    <script src="assets/js/funciones.js"></script>
+    <!--<script src="assets/js/funciones.js"></script>-->
+    <script src="assets/js/protip-retorno.js"></script>
 </body>
 </html>
