--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         Lo que me gusta
     </p>
 
-    <script src="assets/js/ciclos/while-do-while.js"></script>
+    <script src="assets/js/ciclos/for.js"></script>
 </body>
 </html>
