--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
         Lo que me gusta
     </p>
 
-<<<<<<< HEAD
-    <script src="assets/js/clases/class.js"></script>
-=======
-    <script src="assets/js/ciclos/for.js"></script>
->>>>>>> bbdbe3a90385e4c26d7f3a2e866bcb7fe9941ce2
+    <script src="assets/js/clases/contructore-multiple.js"></script>
 </body>
 </html>
